[package]
name = "server"
version = "0.1.0"
authors = ["huaiyugong <huaiyugong123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encrypt={path="../encrypt"}
bytes="0.5.4"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"


